--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ a {
   line-height: 95px;
   margin: 0;
   padding: 0;
+  margin-top: -50px;
   margin-bottom: 10px;
   max-width: 580px;
 }
@@ -104,12 +105,9 @@ a {
   
 }
 .main-button:hover {
-  background-color: transparent;
+  background-color: rgb(161, 161, 161);
   color: #333333;
 }
-
-
-
 
 footer {
   text-align: center;
